--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,10 @@
-img{
+body{
+	text-align: center;
+}
+.col-xs-6 img{
 	width: 100%;
-	height: 170px;
+	height: 250px;
+}
+.col-lg-4 img{
+	width: 80%;
 }
