--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,7 @@
 body{
 	text-align: center;
 }
-.col-xs-6 img{
-	width: 100%;
-	height: 250px;
-}
-.col-lg-4 img{
+img{
 	width: 80%;
+	height: 400px;
 }
