--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,16 @@
 body{
 	text-align: center;
 }
-img{
+.movies img{
 	width: 80%;
 	height: 400px;
+}
+.imagenes img{
+	width: 100%;
+	height: 250px;
+	border-radius: 100%;
+	box-shadow: 0px 4px 6px #000;
+}
+.imagenes img:hover{
+	padding: 20px;
 }
