--- a/css/main.css
+++ b/css/main.css
@@ -1,16 +1,31 @@
 body{
 	text-align: center;
+	background-color:#050505;
 }
 .movies img{
 	width: 80%;
 	height: 400px;
 }
+.movies img{
+	padding: 20px;
+	background-color: #2FCD10;
+}
 .imagenes img{
 	width: 100%;
-	height: 250px;
+	height: 230px;
 	border-radius: 100%;
 	box-shadow: 0px 4px 6px #000;
 }
 .imagenes img:hover{
 	padding: 20px;
+	background-color: #2FCD10;
+}
+header{
+	background-color: #2FCD10;
+	height: 100px;
+}
+h1,h2,h3,h5,p{
+	margin-top:10px;
+	margin-bottom: 10px;
+	color:white;
 }
