--- a/css/main.css
+++ b/css/main.css
@@ -9,23 +9,28 @@ body{
 .movies img:hover{
 	padding: 20px;
 	background-color: #2FCD10;
+	border-radius:5px solid white;
 }
 .imagenes img{
 	width: 100%;
 	height: 230px;
 	border-radius: 100%;
-	box-shadow: 0px 4px 6px #000;
+	box-shadow: 0px 4px 6px white;
 }
 .imagenes img:hover{
 	padding: 20px;
 	background-color: #2FCD10;
+	border-radius: 100%;
 }
 header{
 	background-color: #2FCD10;
 	height: 100px;
 }
 h1,h2,h3,h5,p{
-	margin-top:10px;
+	margin-top:30px;
 	margin-bottom: 10px;
 	color:white;
+}
+iframe{
+	height: 300px;
 }
