--- a/css/main.css
+++ b/css/main.css
@@ -26,11 +26,17 @@ header{
 	background-color: #2FCD10;
 	height: 100px;
 }
-h1,h2,h3,h5,p{
+h1{
+	margin-top:50px;
+	margin-bottom: 10px;
+	color:white;
+}
+h2,h3,h4,h5,p{
 	margin-top:30px;
 	margin-bottom: 10px;
 	color:white;
 }
 iframe{
 	height: 300px;
+	box-shadow: 0px 5px 7px white;
 }
