--- a/css/main.css
+++ b/css/main.css
@@ -30,11 +30,13 @@ h1{
 	margin-top:50px;
 	margin-bottom: 10px;
 	color:white;
+	font-family: 'Gloria Hallelujah', cursive;
 }
 h2,h3,h4,h5,p{
 	margin-top:30px;
 	margin-bottom: 10px;
 	color:white;
+	font-family: 'Roboto Slab', serif;
 }
 iframe{
 	height: 300px;
