--- a/css/main.css
+++ b/css/main.css
@@ -25,15 +25,16 @@ body{
 header{
 	background-color: #2FCD10;
 	height: 100px;
+	margin-bottom: 30px;
 }
 h1{
-	margin-top:50px;
+	margin-top:30px;
 	margin-bottom: 10px;
 	color:white;
 	font-family: 'Gloria Hallelujah', cursive;
 }
 h2,h3,h4,h5,p{
-	margin-top:30px;
+	margin-top:50px;
 	margin-bottom: 10px;
 	color:white;
 	font-family: 'Roboto Slab', serif;
